# AsyncApiProject

./: .flake8  README.md  docker-compose.yaml  pyproject.toml
src/: main.py
src/api/v1/: films.py  genres.py  persons.py
src/core/: .env_example  config.py
src/models/: film.py  genre.py  person.py
src/services/: film.py  genre.py  person.py
